gateway-istio/reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-backend-deployment-$COLOR_TEST
  labels:
    app: reviews-backend
    namespace: library-ns
    color: $COLOR_TEST
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-backend
      color: $COLOR_TEST
  template:
    metadata:
      labels:
        app: reviews-backend
        color: $COLOR_TEST
    spec:
      containers:
      - name: reviews-backend
        image: chaphe/backend-reviews-image:1.0
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-frontend-deployment
  namespace: library-ns  
  labels:
    app: reviews-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-frontend
  template:
    metadata:
      labels:
        app: reviews-frontend
    spec:
      containers:
      - name: reviews-frontend
        image: chaphe/frontend-reviews-image:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-backend-service
  namespace: library-ns  
spec:
  type: NodePort
  selector:
    app: reviews-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30200
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-frontend-service
  namespace: library-ns  
spec:
  type: NodePort
  selector:
    app: reviews-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30201
